--- a/.github/ISSUE_TEMPLATE/new_package.yml
+++ b/.github/ISSUE_TEMPLATE/new_package.yml
@@ -26,7 +26,7 @@ body:
         - Other SCTO platform
         - No relationship
     validations:
-      required: false
+      required: true
   - type: input
     id: package
     attributes:
