--- a/.github/workflows/calculate_risk.yaml
+++ b/.github/workflows/calculate_risk.yaml
@@ -30,4 +30,7 @@ jobs:
           git add tables/validated_packages.csv
           git commit -m "add new packages" || echo "No changes to commit"
           git push origin main || echo "No changes to commit"
+          git add tables/package_tests.csv
+          git commit -m "add new tests" || echo "No changes to commit"
+          git push origin main || echo "No changes to commit"
 
