--- a/.github/workflows/publish_quarto.yaml
+++ b/.github/workflows/publish_quarto.yaml
@@ -9,7 +9,7 @@ name: Build and publish Quarto site
 
 jobs:
   build-deploy:
-    runs-on: ubuntu-latest
+    runs-on: windows-latest
     permissions:
       contents: write
     steps:
@@ -22,7 +22,7 @@ jobs:
       - name: Install R
         uses: r-lib/actions/setup-r@v2
         with:
-          r-version: '4.2.0'
+          r-version: '4.3.0'
 
       - name: Install R Dependencies
         run: Rscript -e 'install.packages(c("jsonlite", "cranlogs", "crayon", "dplyr", "glue", "lubridate", "sessioninfo", "testthat", "rmarkdown", "knitr", "kableExtra", "magrittr", "devtools", "readr", "tidyr", "gt", "ggplot2", "pkgsearch"))'
