--- a/.github/workflows/print_env.yml
+++ b/.github/workflows/print_env.yml
@@ -1,12 +1,12 @@
 on:
   issues:
-  types: [opened, edited]
+    types: [opened, edited]
 
 name: print env
 
 jobs:
   render:
-  name: Reply to issue
-  runs-on: ubuntu-latest
-  steps:
-    - uses: managedkaos/print-env@v1.0
+    name: print env
+    runs-on: ubuntu-latest
+    steps:
+      - uses: managedkaos/print-env@v1.0
