--- a/.github/workflows/print_env.yml
+++ b/.github/workflows/print_env.yml
@@ -10,3 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: managedkaos/print-env@v1.0
+
+  sayHi:
+    if: contains(github.event.issue.labels.*.name, 'package')
+    runs-on: ubuntu-latest
+    steps:
+      - name: Say Hi
+        run: echo "Hello, World!"
