--- a/.github/workflows/print_env.yml
+++ b/.github/workflows/print_env.yml
@@ -12,7 +12,7 @@ jobs:
       - uses: managedkaos/print-env@v1.0
 
   sayHi:
-    if: startWith(github.event.issue.title, '[Package validation]')
+    if: startsWith(github.event.issue.title, '[Package validation]')
     runs-on: ubuntu-latest
     steps:
       - name: Say Hi
