--- a/_quarto.yml
+++ b/_quarto.yml
@@ -4,14 +4,15 @@ project:
 website:
   title: "Statistics and Methodology - R package validation"
   page-footer: CC-BY SCTO Statistics and Methodology
-  favicon: resources/SCTO_Platforms.png
+  favicon: SCTO_Platforms.png
   navbar:
-    title: "SCTO Stats and Methodology"
+    title: "SCTO Stats and Methodology - R package validation"
     right:
       - text: "Home"
         href: index.html
-      - text: "GitHub"
+      - icon: github
         href: "https://github.com/SwissClinicalTrialOrganisation/pkg_validation"
+    background: white
   sidebar:
     style: "docked"
     search: true
@@ -23,9 +24,12 @@ website:
           - href: policy.qmd
           - href: pkg_validation.qmd
           - href: risk_metrics.qmd
+    # logo: SCTO_Platforms.png
 
 format:
   html:
-    theme: cosmo
+    theme:
+      light: flatly
+      dark: darkly
     css: styles.css
     toc: true
