--- a/.github/workflows/test_pkg.yaml
+++ b/.github/workflows/test_pkg.yaml
@@ -3,10 +3,10 @@
 on:
   workflow_dispatch
 
-name: R-CMD-check
+name: Test R package
 
 jobs:
-  R-CMD-check:
+  Test R package:
     runs-on: ${{ matrix.config.os }}
 
     name: ${{ matrix.config.os }} (${{ matrix.config.r }})
@@ -43,6 +43,7 @@ jobs:
     env:
       GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
       R_KEEP_PKG_SOURCE: yes
+      NUMBER: ${{ github.event.issue.number }}
 
     steps:
       - uses: actions/checkout@v4
