--- a/.github/workflows/test_pkg.yaml
+++ b/.github/workflows/test_pkg.yaml
@@ -63,8 +63,37 @@ jobs:
         run: Rscript -e 'install.packages("validation", repos = "https://ctu-bern.r-universe.dev", dependencies = TRUE)'
 
       - name: Run script to test package
-        id: pkgrisk
+        id: pkgtest
         run: Rscript -e 'source("resources/test_pkg.R")'
+
+      - name: commit updated tests CSV
+        if: steps.pkgtest.outcome == 'success'
+        run: |
+          git add tables/package_tests.csv
+          git commit -m "add new tests" || echo "No changes to commit"
+          git push origin main || echo "No changes to commit"
+
+  update_tab:
+    name: update test table
+    runs-on: macOS-latest
+    needs: [test_r_package]
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+      # - uses: managedkaos/print-env@v1.0
+      - uses: actions/checkout@v4
+
+      - uses: r-lib/actions/setup-r@v2
+
+      - name: Install dependencies
+        run: Rscript -e 'install.packages(c("jsonlite", "cranlogs", "crayon", "dplyr", "glue", "lubridate", "sessioninfo", "testthat", "rmarkdown", "knitr", "kableExtra", "magrittr", "devtools", "readr", "tidyr", "pkgsearch"))'
+
+      - name: Install validation
+        run: Rscript -e 'install.packages("validation", repos = "https://ctu-bern.r-universe.dev", dependencies = TRUE)'
+
+      - name: Run script to calculate risk and post comment
+        id: pkgtest
+        run: Rscript -e 'source("resources/update_tests_table.R")'
 
       - name: commit updated tests CSV
         if: steps.pkgtest.outcome == 'success'
