--- a/.github/workflows/test_pkg.yaml
+++ b/.github/workflows/test_pkg.yaml
@@ -2,6 +2,7 @@
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
 on:
   workflow_dispatch
+  workflow_call
 
 name: Test R package
 
