--- a/.github/ISSUE_TEMPLATE/new_test_internal.yml
+++ b/.github/ISSUE_TEMPLATE/new_test_internal.yml
@@ -76,7 +76,7 @@ body:
     id: test_scrutiny
     attributes:
       label: What was tested?
-      description: Provide a detailed description of the tests that are relevant to your use case.
+      description: Provide a detailed description of the tests that are relevant to your use case, including the relevant function(s) being tested.
     validations:
       required: true
   - type: dropdown
@@ -94,7 +94,8 @@ body:
     attributes:
       label: Test output
       description: |
-        Copy output from the R console.
+        Run e.g. devtools::test() and copy output from the R console.
+        To run a specific test file, use the filter argument: e.g. `devtools::test(filter = "filename")`.
         This should include a table as well as any error or warning messages.
     validations:
       required: true
@@ -103,5 +104,6 @@ body:
     attributes:
       label: Session info
       description: Copy output from the R console.
-
+    validations:
+      required: true
 
