--- a/_quarto.yml
+++ b/_quarto.yml
@@ -22,20 +22,27 @@ website:
       - href: index.qmd
         title: "Policy"
       - href: sop/policy.qmd
+
+
       - section: "SOPs"
         contents:
-         - href: sop/sop_fn_tests.qmd
-         - href: sop/risk_metrics.qmd
+          - href: sop/testing.qmd
+          - href: sop/risk_metrics.qmd
+
 
       - section: "Work Intructions"
         contents:
           - href: wi/pkg_validation.qmd
-          - href: wi/testing2.qmd
+          - href: wi/testing.qmd
           - href: wi/review_tests.qmd
           - href: wi/running_tests.qmd
+
+
       - href: sop/highlevel_ra.qmd
       - href: results/pkgassessment.qmd
       - href: results/pkgtesting.qmd
+
+
       - section: "Useful links"
         contents:
          - text: "Report an assessment or test"
