--- a/.github/workflows/test_pkg.yaml
+++ b/.github/workflows/test_pkg.yaml
@@ -58,10 +58,10 @@ jobs:
           use-public-rspm: true
 
       - name: Install dependencies
-        run: Rscript -e 'install.packages(c("jsonlite", "cranlogs", "crayon", "dplyr", "glue", "lubridate", "sessioninfo", "testthat", "rmarkdown", "knitr", "kableExtra", "magrittr", "devtools", "readr", "tidyr", "pkgsearch"))'
+        run: Rscript -e 'install.packages(c("jsonlite", "cranlogs", "crayon", "dplyr", "glue", "lubridate", "sessioninfo", "testthat", "rmarkdown", "knitr", "kableExtra", "magrittr", "devtools", "readr", "tidyr", "pkgsearch", "conflicted"))'
 
       - name: Install validation
-        run: Rscript -e 'install.packages("validation", repos = "https://ctu-bern.r-universe.dev", dependencies = TRUE)'
+        run: Rscript -e 'install.packages("SCTORvalidation", repos = "https://ctu-bern.r-universe.dev", dependencies = TRUE)'
 
       - name: Run script to test package
         id: pkgtest
@@ -87,10 +87,10 @@ jobs:
       - uses: r-lib/actions/setup-r@v2
 
       - name: Install dependencies
-        run: Rscript -e 'install.packages(c("jsonlite", "cranlogs", "crayon", "dplyr", "glue", "lubridate", "sessioninfo", "testthat", "rmarkdown", "knitr", "kableExtra", "magrittr", "devtools", "readr", "tidyr", "pkgsearch"))'
+        run: Rscript -e 'install.packages(c("jsonlite", "cranlogs", "crayon", "dplyr", "glue", "lubridate", "sessioninfo", "testthat", "rmarkdown", "knitr", "kableExtra", "magrittr", "devtools", "readr", "tidyr", "pkgsearch", "conflicted"))'
 
-      - name: Install validation
-        run: Rscript -e 'install.packages("validation", repos = "https://ctu-bern.r-universe.dev", dependencies = TRUE)'
+      - name: Install SCTORvalidation
+        run: Rscript -e 'install.packages("SCTORvalidation", repos = "https://ctu-bern.r-universe.dev", dependencies = TRUE)'
 
       - name: Run script to calculate risk and post comment
         id: pkgtest
